--- a/flask/Pipfile
+++ b/flask/Pipfile
@@ -15,6 +15,8 @@ requests = "*"
 Pillow = "*"
 opencv-python-headless = "*"
 numpy = "*"
+scikit-learn = "*"
+
 
 [requires]
 python_version = "3.9"
